# FlowRS

./: .gitignore  README.md
backend/: Cargo.toml  README.md  profile.json  run_load_test.sh
backend/benches/: message_processing.rs
backend/examples/: multi_exchange.rs
backend/src/: binance.rs  lib.rs  main.rs  metrics.rs  orderbook.rs  server.rs  types.rs
backend/src/exchanges/: README.md  binance.rs  bybit.rs  coinbase.rs  kraken.rs  manager.rs  mod.rs
backend/tests/: load_test.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  constants.ts  types.ts
frontend/src/components/: MetricsPanel.vue  OrderBook.vue  RecentTrades.vue
frontend/src/composables/: useWebSocket.ts
