[package]
name = "flow-rs-backend"
version = "0.1.0"
edition = "2021"
description = "Real-time order book visualizer backend"

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
tikv-jemallocator = "0.6.1"

# WebSocket client and server
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Precise decimal handling for financial data
rust_decimal = { version = "1.39.0", features = ["serde", "serde-str"] }
rust_decimal_macros = "1.39.0"

# HTTP client for initial snapshot
reqwest = { version = "0.13.0-rc.1", features = ["json"] }

# Async trait support for exchange connectors
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Memory stats (optional, for metrics)
sysinfo = "0.37.2"
dashmap = "6.1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[profile.release]
debug = true          # Enable debug symbols for profiling
lto = true
codegen-units = 1
opt-level = 3
